// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario 1 : Mise à jour de Sulfuras (aucune modification) 1`] = `
[
  "Item Name : Sulfuras, Hand of Ragnaros",
  "SellIn : 0",
  "Quality : 80",
  "Updated SellIn : 0",
  "Updated Quality : 80",
]
`;

exports[`Scenario 2 : Mise à jour d'un élément normal 1`] = `
[
  "Item Name : Normal Item",
  "SellIn : 10",
  "Quality : 20",
  "Updated SellIn : 9",
  "Updated Quality : 19",
]
`;

exports[`Scenario 3 : Mise à jour d'un élément normal avec une qualité minimale 1`] = `
[
  "Item Name : Normal Item",
  "SellIn : 10",
  "Quality : 0",
  "Updated SellIn : 9",
  "Updated Quality : 0",
]
`;

exports[`Scenario 4 : Mise à jour d'un élément normal avec un sellIn négatif 1`] = `
[
  "Item Name : Normal Item",
  "SellIn : 0",
  "Quality : 30",
  "Updated SellIn : -1",
  "Updated Quality : 28",
]
`;

exports[`Scenario 5 : Mise à jour d'Aged Brie 1`] = `
[
  "Item Name : Aged Brie",
  "SellIn : 5",
  "Quality : 30",
  "Updated SellIn : 4",
  "Updated Quality : 31",
]
`;

exports[`Scenario 6 : Mise à jour d'Aged Brie avec une qualité maximale 1`] = `
[
  "Item Name : Aged Brie",
  "SellIn : 10",
  "Quality : 50",
  "Updated SellIn : 9",
  "Updated Quality : 50",
]
`;

exports[`Scenario 7 : Mise à jour d'Aged Brie après la date de vente 1`] = `
[
  "Item Name : Aged Brie",
  "SellIn : 0",
  "Quality : 30",
  "Updated SellIn : -1",
  "Updated Quality : 32",
]
`;

exports[`Scenario 8 : Mise à jour de Backstage Passes 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 15",
  "Quality : 40",
  "Updated SellIn : 14",
  "Updated Quality : 41",
]
`;

exports[`Scenario 9 : Mise à jour de Backstage Passes avec une date de concert proche 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 6",
  "Quality : 30",
  "Updated SellIn : 5",
  "Updated Quality : 32",
]
`;

exports[`Scenario 10 : Mise à jour de Backstage Passes avec une date de concert très proche 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 3",
  "Quality : 30",
  "Updated SellIn : 2",
  "Updated Quality : 33",
]
`;

exports[`Scenario 11 : Mise à jour de Backstage Passes avec une date de concert dépassée 1`] = `
[
  "Item Name : Backstage passes to a TAFKAL80ETC concert",
  "SellIn : 0",
  "Quality : 30",
  "Updated SellIn : -1",
  "Updated Quality : 0",
]
`;

exports[`Scenario 12 : Mise à jour de Conjured Item 1`] = `
[
  "Item Name : Conjured Item",
  "SellIn : 10",
  "Quality : 20",
  "Updated SellIn : 9",
  "Updated Quality : 18",
]
`;

exports[`Scenario 13 : Mise à jour de Conjured Item avec sellIn négatif 1`] = `
[
  "Item Name : Conjured Item",
  "SellIn : 0",
  "Quality : 20",
  "Updated SellIn : -1",
  "Updated Quality : 16",
]
`;
